--- a/latex/ch6.tex
+++ b/latex/ch6.tex
@@ -100,9 +100,9 @@ By contrast, the logarithmic scale takes the total number of frequency bins as a
 \section{sliCQT dimensionality: fixing $f_{\text{max}}$ to the Nyquist rate}
 \label{appendix:slicqdim1}
 
-In Section \ref{sec:slicqparamsrch}, I described that in the parameter search for the frequency scale of the sliCQT, the maximum frequency $f_{\text{max}}$ was fixed to 22,050 Hz (the Nyquist rate of the 44,100 Hz sample rate of the music data set), because it sometimes led to a smaller sliCQT than $f_{\text{max}} < 22,050 \text{ Hz}$. Note that this is not always true, and depends on the other sliCQT parameters. Out of 809 examples evaluated for this section, 758 of them (the majority) had a smaller transform when using the smaller value of $f_{\text{max}}$, and 51 of them had a larger transform with the smaller value of $f_{\text{max}}$.
+In Section \ref{sec:slicqparamsrch}, I described that in the parameter search for the frequency scale of the sliCQT, the maximum frequency $f_{\text{max}}$ was fixed to 22,050 Hz (the Nyquist rate of the 44,100 Hz sample rate of the music data set), because it led to a smaller sliCQT than $f_{\text{max}} < 22,050 \text{ Hz}$ in several cases. Note that this is not always true, and depends on the other sliCQT parameters. Out of 809 examples evaluated for this section, 51 of them had a larger transform with the smaller value of $f_{\text{max}}$, and 758 of them (the majority) had a smaller transform when using the smaller value of $f_{\text{max}}$. The evaluation was done on one song from the MUSDB18-HQ dataset, ``Skelpolu - Human Mistakes,'' which has a duration of 324.69 seconds, or 14,318,640 samples at a 44,100 Hz sample rate.
 
-Table \ref{table:slicqdimdegen1} shows some examples of sliCQT parameters for the Constant-Q scale from the more rare case where setting $f_{\text{max}} = \text{Nyquist rate}$ led to a smaller transform that occupied less memory than setting $f_{\text{max}} < \text{Nyquist rate}$. Table \ref{table:slicqdimdegen2} shows more typical counter-examples, where the smaller frequency range resulted in a smaller transform.
+Table \ref{table:slicqdimdegen1} shows some examples of sliCQT parameters for the Constant-Q scale from the more rare case where a larger frequency range with $f_{\text{max}} = \text{Nyquist rate}$ led to a smaller transform than a smaller frequency range with $f_{\text{max}} < \text{Nyquist rate}$. Table \ref{table:slicqdimdegen2} shows more typical counter-examples, where smaller frequency ranges result in smaller transforms.
 
 \begin{table}[ht]
 	\centering
