Annotation for review

--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -21,11 +21,15 @@ Finally, I am grateful to the open-source community for music source separation 
 
 \newpagefill
 
+\begin{shaded}
+
 \renewcommand{\abstractname}{R{\'e}sum{\'e}}
 \begin{abstract}
 \phantomsection
 \addcontentsline{toc}{section}{\abstractname}
 	La séparation de sources musicales consiste à extraire d’un enregistrement audio une ou plusieurs sources ou instruments de musique (tels que des percussions ou de la voix). Plus spécifiquement, la tâche de démixage correspond au cas où l’enregistrement audio est séparé en toutes ses sources constitutives, qui peuvent être re-mixées pour restituer l’ensemble original. Les modèles de démixage de musique qui se fondent sur la transformée de Fourier à court-terme (TFCT) pour représenter les signaux sonores sont populaires et ont été utilisées avec succès au cours des dernières années. Toutefois, le compromis entre résolution temporelle et résolution fréquentielle préfixé dans la TFCT, résultant du principe d’incertitude temps-fréquence, peut affecter considérablement les résultats du démixage audio. La transformée en tranche à facteur de qualité constant (sliCQT) est une transformée temps-fréquence pour laquelle le compromis entre résolutions temporelle et fréquentielle varie selon la région spectrale considérée, ce qui permet une plus grande flexibilité d’approche qu’avec la TFCT. Le modèle proposé dans cette thèse remplace la TFCT par la sliCQT dans un modèle de démixage audio et évalue l’impact de ce choix sur les résultats.
 \end{abstract}
+
+\end{shaded}
 
 \end{document}
