--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -6,20 +6,20 @@
 
 The study of acoustic signals forms the core of many fields including sonar, seismology, audio, music, and speech. Acoustic signals are functions of time, representing the evolving amplitude of the sound pressure wave \parencite{melbook}. Another way to characterize acoustic signals is by their frequency components, which can be computed from the Fourier Transform \parencite{melbook}.
 
-The Fourier Transform represents the frequency components of an acoustic signal by a sum of infinite sinusoids, but it does not describe how these frequencies evolve with time \parencite{gabordiagrams}. Conversely, many important signals such as speech and music contain frequency components that change with time \parencite{gabor1946}. For these signals, joint time-frequency analysis is required.
+The Fourier Transform\explanation{dropped ``One downside...'')} represents the frequency components of an acoustic signal by a sum of infinite sinusoids, but it does not describe how these frequencies evolve with time \parencite{gabordiagrams}. Conversely, many important signals such as speech and music contain frequency components that change with time \parencite{gabor1946}. For these signals, joint time-frequency analysis is required.
 
-One method for performing time-frequency analysis is to multiply the signal being studied by finite, consecutive windows of a short duration, and taking the Fourier Transform of each windowed section. This is also referred to as the Short-Time Fourier Transform (STFT) or spectrogram \parencite{melbook}. \textcite{melbook} describe the resulting spectral analysis as an important technique in analyzing and understanding audio that has been in use since the 1930s.
+\hlblu{One method for performing time-frequency analysis} is to multiply the signal being studied by finite, consecutive windows of a short duration, and taking the Fourier Transform of each windowed section. This is also referred to as the Short-Time Fourier Transform (STFT) or spectrogram \parencite{melbook}. \textcite{melbook} describe the resulting spectral analysis as an important technique in analyzing and understanding audio that has been in use since the 1930s.
 
-Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio \parencite{musicsepgood, musicmask}. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed back to the original mixture.\footnote{Thanks to Fabian-Robert St{\"o}ter for the discussion on the difference between music source separation, demixing, and unmixing.} Music demixing systems are commonly designed to split mixed songs into four sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of Western pop music used in mixing and demixing datasets \parencite{sisec2016, otherdataset2, musdb18, musdb18hq}.
+Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio \parencite{musicsepgood, musicmask}. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed back to the original mixture.\footnote{Thanks to Fabian-Robert St{\"o}ter for the discussion on the difference between music source separation, demixing, and unmixing.} \hlblu{Music demixing systems are commonly designed to split mixed songs into four sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of Western pop music used in mixing and demixing datasets} \parencite{sisec2016, otherdataset2, musdb18, musdb18hq}.
 
-The STFT is a popular tool used by various music demixing systems throughout the years \parencite{musicsepgood, musicmask, sisec2018, fitzgerald1, umx, plumbley1, plumbley2}. However, the STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot have maximal resolution in both time and frequency, and can trade them off by changing the duration and the type of the window \parencite{gabor1946, gabordiagrams}.
+The STFT is a popular tool used by various music demixing systems throughout the years \parencite{musicsepgood, musicmask, sisec2018, fitzgerald1, umx, plumbley1, plumbley2}. However, the STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot have maximal resolution in both time and frequency, and can trade them off by changing the duration \hlblu{and the type} of the window \parencite{gabor1946, gabordiagrams}.
 
 The tradeoff in time-frequency resolution is an important consideration in music demixing \parencite{tftradeoff1, tftradeoff2}. Systems have been proposed that use multiple STFTs \parencite{fitzgerald2, driedger} or that replace the STFT with different time-frequency transforms \parencite{fitzgerald2, cqtseparation, bettermusicsep}, to improve results through the manipulation of time-frequency resolution.
 
 \subsection{Motivation}
 \label{sec:motivation}
 
-Musical signals have characteristics that lead to conflicting requirements in the STFT. According to \textcite{doerflerphd}, music needs to be analyzed with long-duration windows in the low-frequency region for a high frequency resolution, because the bass notes lay the harmonic basis of a song. Conversely, the high-frequency region contains broadband sounds and components of transients, which are useful for timbre identification and rhythm; these transients have fast attacks and decays and need to be analyzed with short-duration windows \parencite{doerflerphd}. \citeauthor{cqtransient} similarly state that
+Musical signals have characteristics that lead to conflicting requirements in the STFT. According to \textcite{doerflerphd}, music needs to be analyzed with long-duration windows in the low-frequency region for a high frequency resolution, because the bass notes lay the harmonic basis of a song. Conversely, the high-frequency region contains broadband sounds \hlblu{and components of transients}, which are useful for timbre identification and rhythm; these transients have fast attacks and decays and need to be analyzed with short-duration windows \parencite{doerflerphd}. \citeauthor{cqtransient} similarly state that
 
 \begin{quote}
 	a well known disadvantage of the STFT is the rigid time-frequency resolution trade-off providing a constant absolute frequency resolution throughout the entire range of audible frequencies. In contrast to this we know that due to both musical and auditory aspects frequency resolution is preferred that increases from high to low frequencies (and vice versa for time resolution) \parencite[1]{cqtransient}.
@@ -37,7 +37,7 @@ Figure \ref{fig:stfttradeoff} shows a musical glockenspiel signal analyzed with 
 
 \textcite{dictionary} note that the first use of the STFT was by \textcite{gabor1946} to analyze a speech signal, which used fixed-size Gaussian windows. This was called the Gabor transform, and is now considered a special case of the STFT \parencite{dictionary}.
 
-The Constant-Q Transform (CQT) was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale that matched the notes of a musical pitch scale. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the CQT and the Fourier Transform is shown in Figure \ref{fig:violin}. From the use of short windows in the high frequency regions, the CQT demonstrates good time resolution \parencite{cqtransient} in the region of transients and broadband signals, which are important for timbre and instrument identification \parencite{timbretransients1, timbretransients2}.
+The Constant-Q Transform (CQT) was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale \hlblu{that matched the notes of a musical pitch scale}. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the CQT and the Fourier Transform is shown in Figure \ref{fig:violin}. From the use of short windows in the high frequency regions, the CQT demonstrates good time resolution \parencite{cqtransient} in the region of transients and broadband signals, which are important for timbre and instrument identification \parencite{timbretransients1, timbretransients2}.
 
 \begin{figure}[ht]
 	\centering
@@ -47,7 +47,7 @@ The Constant-Q Transform (CQT) was originally proposed by \textcite{jbrown} to a
 	\label{fig:violin}
 \end{figure}
 
-Building on the Gabor transform (or STFT), and using the CQT as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT), a time-frequency transform with varying time-frequency resolution and perfect inverse. The NSGT is computed by varying the size of the window on which the Fourier Transform is taken. \textcite{slicq} introduced a realtime variant of the NSGT, called the \textit{sliced Constant-Q transform} (sliCQT). The NSGT spectrogram of the musical glockenspiel signal is shown in Figure \ref{fig:nsgttradeoff}, with minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in Figure \ref{fig:stfttradeoff}.
+Building on the Gabor transform (or STFT), and using the CQT as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT), a time-frequency transform with varying time-frequency resolution and perfect inverse. The NSGT is computed by varying the size of the window on which the Fourier Transform \hlblu{is taken}. \textcite{slicq} \hlblu{introduced a realtime variant of the NSGT}, called the \textit{sliced Constant-Q transform} (sliCQT). The NSGT spectrogram of the musical glockenspiel signal is shown in Figure \ref{fig:nsgttradeoff}, with minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in Figure \ref{fig:stfttradeoff}.
 
 \begin{figure}[ht]
 	\centering
@@ -58,7 +58,7 @@ Building on the Gabor transform (or STFT), and using the CQT as the motivating a
 
 \subsection{Thesis objectives and related work}
 
-STFT-based music demixing techniques may be limited by the fixed time-frequency resolution of the STFT. The objective of this thesis is to replace the STFT in a music demixing model with the sliCQT, which has a varying time-frequency resolution. Open-Unmix \parencite{umx} is a state-of-the-art deep neural network for music demixing based on the STFT, with an open-source reference implementation.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} The goal of this thesis is to adapt Open-Unmix to create a usable music demixing software application based on the sliCQT.
+STFT-based music demixing techniques may be limited by the fixed time-frequency resolution of the STFT. The objective of this thesis is to replace the STFT in a music demixing model with the sliCQT\explanation{moved first slicqt holighaus ref to prev. page}, which has a varying time-frequency resolution. Open-Unmix \parencite{umx} is a state-of-the-art deep neural network for music demixing based on the STFT, with an open-source reference implementation.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} The goal of this thesis is to adapt Open-Unmix to create a usable music demixing software application based on the sliCQT.
 
 Several music demixing papers \parencite{fitzgerald1, driedger, tftradeoff1, tftradeoff2} describe the use of different window sizes of the STFT to improve source separation performance. By contrast, using the NSGT instead of the STFT may be of interest, as it is a single transform which might replace the need for multiple STFTs.
 
