--- a/latex/report.tex
+++ b/latex/report.tex
@@ -80,7 +80,7 @@
 }
 
 \newcommand{\explanation}{
-        \todo[inline,color=green!40]
+        \todo[color=green!40]
 }
 
 \DeclareCiteCommand{\secondaryciteauthor}{}{\printtext[bibhyperref]{\printnames{labelname}}}{}{}
